fix for bunched up items on mobile

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -245,6 +245,7 @@ input[type="submit"]
   .page
     height: auto
     width: auto
+    position: static
     margin: 2rem 0
     padding: 1rem
     background-image: none !important
